<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="sign_up">Not a member? Sign up</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <!-- Enums -->
    <string name="description_enum_country_mexico">Mexico</string>
    <string name="description_enum_country_usa">United States</string>
    <string name="description_enum_country_canada">Canada</string>
    <string name="description_enum_language_spanish">Spanish</string>
    <string name="description_enum_language_english">English</string>
    <string name="description_enum_promo_percentage">Percentage</string>
    <string name="description_enum_promo_amount">Amount</string>
    <string name="description_enum_user_customer">Customer</string>
    <string name="description_enum_user_administrator">Promoter</string>
    <string name="description_enum_payment_type_credit">Credit Card</string>
    <string name="description_enum_payment_type_cash">Cash</string>
    <string name="description_enum_movement_type_submitted">Submitted</string>
    <string name="description_enum_movement_type_subtraction">Subtraction</string>
    <string name="description_enum_movement_type_cancellation">Cancellation</string>

    <!-- Strings related to tour profile -->
    <string name="app_name" translatable="false">Tourstop</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="app_name1" translatable="false">TestScroll</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="destination">Destination</string>
    <string name="stops">Stops</string>
    <string name="description">Description</string>
    <string name="seats_available">Seats available</string>
    <string name="discount">Discount</string>
    <string name="company">Company</string>
    <string name="special_requirements">Special requirements</string>
    <string name="action_reservation">Book now</string>

    <!-- Strings related to card payment -->
    <string name="card_number">Card number</string>
    <string name="card_holder">Card holder</string>
    <string name="card_security_code">Security code (CVC)</string>

    <!-- Strings related to order -->
    <string name="promo">Enter promo code:</string>
    <string name="action_pay">Proceed to checkout</string>
    <string name="no_seats">Number of seats:</string>
    <string name="total">Your total is:</string>

    <!--Strings related to promotion -->
    <string name="promo_code"> Enter promo code</string>
    <string name="promo_discount"> Enter discount amount </string>
    <string name="action_save">Save Promo</string>
    <string name="action_cancel">Cancel</string>


    <!-- Other -->
    <string name="action_create_new_tour">Create New Tour</string>
    <string name="cta_header_description" translatable="false">temp</string>
    <string name="field_name">Name: *</string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="field_price">Price: *</string>
    <string name="hint_price">Enter Price</string>
    <string name="field_destination">Destination: *</string>
    <string name="hint_destination">Enter Destination</string>
    <string name="field_stops">Stops:</string>
    <string name="hint_stops">Enter Stops</string>
    <string name="field_description">Description: *</string>
    <string name="hint_description">Enter Description</string>
    <string name="field_max_seats">Seats Available: *</string>
    <string name="hint_max_seats">Enter Number of Seats</string>
    <string name="field_promotion">Enter promotion</string>
    <string name="hint_promotion">Enter Promotion</string>
    <string name="field_promoter_name">Promoter Name: *</string>
    <string name="hint_promoter_name">Enter Promoter Name</string>
    <string name="field_requirements">Requirements: *</string>
    <string name="hint_requirements">Enter Requirements</string>
    <string name="statement_mandatory">All fields marked with * are mandatory</string>
    <string name="field_username">User Name</string>
    <string name="field_email">E-mail: *</string>
    <string name="hint_email">Enter E-Mail</string>
    <string name="field_phone">Cell Phone:</string>
    <string name="hint_phone">Enter Cell Phone</string>
    <string name="field_change_password">Change Password</string>
    <string name="field_change_payment">Change Payment Method</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="field_current_password">Current Password: *</string>
    <string name="hint_current_password">Enter Current Password</string>
    <string name="field_new_password">New Password: *</string>
    <string name="hint_new_password">Enter New Password</string>
    <string name="field_confirm_new_password">Confirm New Password: *</string>
    <string name="action_search_tour">Search Tour</string>
    <string name="from_field_date">From date:</string>
    <string name="to_field_date">To Date:</string>
    <string name="field_to">To</string>
    <string name="action_search">Search</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="messages">Messages</string>
    <string name="wishlist">Wishlist</string>
    <string name="my_tours">My Tours</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="field_date">Date:</string>
    <string name="field_date_range">To date:</string>
    <string name="assign_checkpoints">Assign Checkpoints</string>
    <string name="toast_error_input">Invalid input, please check again</string>
</resources>

