<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="viewModel" type="com.cetys.dreamteam.musicalbroccoli.presentation.viewModels.contracts.EditUserViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/navigation_header_image" />

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:background="@drawable/profile_circular_border_imageview"
                android:backgroundTint="#ffffff"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logotourstop" />

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="#0033cc"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:text="@string/field_name"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/profile_layout"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="13dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_name"
                    android:id="@+id/textView7"
                    android:textSize="20sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp" />

                <!-- TODO: Missing first-last name separation -->
                <EditText
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:hint="@string/hint_enter_name"
                    android:text="@{viewModel.user.firstName}"
                    android:id="@+id/editText2"
                    android:background="@drawable/textfields"
                    android:layout_below="@+id/textView7"
                    android:layout_alignStart="@+id/textView7"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:hint="@string/hint_last_name"
                    android:text="@{viewModel.user.lastName}"
                    android:id="@+id/edit_promoter_createTour"
                    android:background="@drawable/textfields"
                    android:layout_marginStart="10dp"
                    android:layout_below="@+id/editText2"
                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_email"
                    android:id="@+id/textView8"
                    android:textSize="20sp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/editText2"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="112dp"/>

                <!-- User: email -->
                <EditText
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@drawable/textfields"
                    android:id="@+id/editText3"
                    android:layout_below="@+id/textView8"
                    android:layout_alignStart="@+id/textView8"
                    android:hint="@string/hint_email"
                    android:text="@{viewModel.user.email}"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/field_phone"
                    android:id="@+id/textView9"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="42dp"
                    android:layout_below="@+id/editText3"
                    android:layout_alignParentStart="true" />

                <!-- User: phone -->
                <EditText
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:inputType="phone"
                    android:ems="10"
                    android:hint="@string/hint_phone"
                    android:text="@{viewModel.user.phone}"
                    android:background="@drawable/textfields"
                    android:id="@+id/editText11"
                    android:layout_below="@+id/textView9"
                    android:layout_alignStart="@+id/textView9"
                    android:layout_marginTop="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/field_change_password"
                    android:onClick="goToChangePassword"
                    android:textColor="@color/darkblue"
                    android:id="@+id/textView10"
                    android:layout_marginTop="62dp"
                    android:layout_below="@+id/editText11"
                    android:layout_alignStart="@+id/editText11" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/field_change_payment"
                    android:onClick="goToChangePayment"
                    android:textColor="@color/darkblue"
                    android:id="@+id/textView11"
                    android:layout_marginTop="47dp"
                    android:layout_below="@+id/textView10"
                    android:layout_alignStart="@+id/textView10" />

                <Button
                    android:background="@android:drawable/toast_frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_save_changes"
                    android:id="@+id/button2"
                    android:onClick="doTemporalToastThing"
                    android:layout_marginTop="45dp"
                    android:layout_below="@+id/textView11"
                    android:layout_alignEnd="@+id/editText11" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/statement_mandatory"
                    android:id="@+id/textView19"
                    android:textSize="12sp"
                    android:textAlignment="center"
                    android:layout_alignTop="@+id/button2"
                    android:layout_alignEnd="@+id/textView9" />

                </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</layout>