<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >
<!--todo: Finish this-->
    <data>

        <variable
            name="viewModel"
            type="com.cetys.dreamteam.musicalbroccoli.presentation.viewModels.contracts.ChangePasswordViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/header_cover_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/navigation_header_image"/>

            <ImageButton
                android:id="@+id/user_profile_photo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_below="@+id/header_cover_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="-60dp"
                android:background="@drawable/profile_circular_border_imageview"
                android:backgroundTint="#ffffff"
                android:elevation="5dp"
                android:padding="20dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logotourstop"/>

            <RelativeLayout
                android:id="@+id/profile_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/header_cover_image"
                android:background="#0033cc"
                android:elevation="4dp"
                android:paddingBottom="24dp">


                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="76dp"
                    android:text="@string/field_change_password"
                    android:textColor="#fff"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="328dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/field_current_password"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:layout_alignStart="@+id/textView1"
                    android:layout_below="@+id/textView1"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfields"
                    android:ems="10"
                    android:hint="@string/hint_current_password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/editText1"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/field_new_password"
                    android:textSize="20sp"/>

                <!-- TODO: New password? -->
                <EditText
                    android:id="@+id/edit_name_createTour"
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:layout_alignStart="@+id/textView2"
                    android:layout_below="@+id/textView2"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfields"
                    android:ems="10"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/edit_name_createTour"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="34dp"
                    android:text="@string/field_confirm_new_password"
                    android:textSize="20sp"/>

                <EditText
                    android:id="@+id/edit_price_createTour"
                    android:layout_width="340dp"
                    android:layout_height="35dp"
                    android:layout_alignStart="@+id/textView3"
                    android:layout_below="@+id/textView3"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/textfields"
                    android:ems="10"
                    android:hint="@string/hint_new_password"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/edit_price_createTour"
                    android:layout_below="@+id/edit_price_createTour"
                    android:layout_marginTop="54dp"
                    android:background="@android:drawable/toast_frame"
                    android:onClick="@{viewModel::onSaveChangesClick}"
                    android:text="@string/action_save_changes"/>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/edit_price_createTour"
                    android:layout_alignTop="@+id/search_button"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginStart="33dp"
                    android:text="@string/statement_mandatory"
                    android:textAlignment="center"
                    android:textSize="12sp"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>
</layout>