<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/iStock_000069982477_Medium_1"
                    />

                <ImageButton
                    android:id="@+id/order_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/header_cover_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-60dp"
                    android:background="@drawable/profile_circular_border_imageview"
                    android:backgroundTint="#ffffff"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logotourstop" />

                <RelativeLayout
                    android:id="@+id/order_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_cover_image"
                    android:background="#0033cc"
                    android:elevation="4dp"
                    android:paddingBottom="25dp">


                    <TextView
                        android:id="@+id/your_order_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="76dp"
                        android:text="Create Promo"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    <EditText
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:hint="@string/promo_code"
        android:paddingLeft="15dp"
        android:id="@+id/create_promotion_code"
        android:background="@drawable/round_edit_text"
        android:layout_marginTop="25dp"/>
    <EditText
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginStart="18dp"
        android:hint="@string/promo_discount"
        android:paddingLeft="15dp"
        android:id="@+id/create_promotion_discount"
        android:background="@drawable/round_edit_text"
        android:layout_marginTop="25dp"/>"

    <Button
        android:id="@+id/promo_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/action_save"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:textStyle="bold"
        android:background="@android:drawable/toast_frame"/>

    <Button
        android:id="@+id/promo_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/action_cancel"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="85dp"
        android:textStyle="bold"
        android:background="@android:drawable/toast_frame"/>
</LinearLayout>
