<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.cetys.dreamteam.musicalbroccoli.presentation.viewModels.contracts.UserProfileViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollview_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_layout">

                <ImageView
                    android:id="@+id/header_cover_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/navigation_header_image" />

                <ImageButton
                    android:id="@+id/user_profile_photo"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_below="@+id/header_cover_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-60dp"
                    android:background="@drawable/profile_circular_border_imageview"
                    android:backgroundTint="#ffffff"
                    android:elevation="5dp"
                    android:padding="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/logotourstop" />

                <RelativeLayout
                    android:id="@+id/profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/header_cover_image"
                    android:background="#0033cc"
                    android:elevation="4dp"
                    android:paddingBottom="24dp">


                    <TextView
                        android:id="@+id/user_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="76dp"
                        android:text="@string/field_username"
                        android:textColor="#fff"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sections_layout"
                    android:layout_below="@+id/profile_layout"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="160dp"
                        android:layout_height="175dp"
                        android:background="#fff"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:padding="15dp"
                        android:text="@string/action_edit_profile"
                        android:onClick="goToEditUserActivity"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:id="@+id/textView"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="18dp" />

                    <TextView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:background="#fff"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:padding="15dp"
                        android:text="@string/my_tours"
                        android:onClick="goToMyToursActivity"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:id="@+id/textView2"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_above="@+id/textView3"
                        android:layout_toEndOf="@+id/textView" />

                    <TextView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:background="#fff"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:padding="15dp"
                        android:text="@string/wishlist"
                        android:onClick="goToWishlistActivity"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:id="@+id/textView3"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_below="@+id/textView"
                        android:layout_toStartOf="@+id/textView4"
                        android:layout_marginTop="17dp" />

                    <TextView
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        android:background="#fff"
                        android:clickable="true"
                        android:elevation="4dp"
                        android:padding="15dp"
                        android:text="@string/messages"
                        android:onClick="goToMessagesActivity"
                        android:textSize="20sp"
                        android:textAlignment="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/textView4"
                        android:layout_alignTop="@+id/textView3"
                        android:layout_toEndOf="@+id/textView" />

                </RelativeLayout>
            </RelativeLayout>
        </ScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorPrimaryDark"
            app:fabSize="normal"
            android:layout_margin="15dp"
            android:layout_alignBottom="@id/scrollview_layout"
            android:layout_alignEnd="@id/scrollview_layout"
            android:onClick="goToCreateTour"
            android:src="@drawable/ic_add_black_24dp" />

    </RelativeLayout>

</layout>